stupid save button

--- a/index.html
+++ b/index.html
@@ -34,82 +34,82 @@
            <div class="planner">
                <div class="row hour-container">
                    <div class="col-2 label">
-                       <div class="time">9 am</div>
+                       <div class="time">9am</div>
                     </div>
-                    <form id="9am_Data" class="col-10 events">
-                       <input type="text">
+                    <form class="col-10 events">
+                       <input type="text" class="inputText" id="9am_Data"/>
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                    <div class="col-2 label">
-                        <div class="time">10 am</div>
+                        <div class="time">10am</div>
                     </div> 
-                    <form id="10am_Data" class="col-10">
-                        <input type="text">
+                    <form class="col-10">
+                        <input type="text" id="10am_Data" class="inputText"/>
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                    <div class="col-2 label">
-                       <div class="time">11 am</div>
+                       <div class="time">11am</div>
                     </div>
-                    <form id="11am_Data" class="col-10">
-                           <input type="text">
+                    <form class="col-10">
+                           <input type="text" id="11am_Data" class="inputText"/>
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                     <div class="col-2 label">
-                        <div class="time">12 pm</div>
+                        <div class="time">12pm</div>
                     </div>
-                    <form id="12pm_Data" class="col-10">
-                        <input type="text">
+                    <form class="col-10">
+                        <input type="text" id="12pm_Data" class="inputText"/>
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                    <div class="col-2 label">
-                        <div class="time">1 pm</div>
+                        <div class="time">1pm</div>
                     </div>
-                    <form id="1pm_Data" class="col-10">
-                        <input type="text">
+                    <form class="col-10">
+                        <input type="text" id="1pm_Data" class="inputText"/>
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                    <div class="col-2 label">
-                       <div class="time">2 pm</div>
+                       <div class="time">2pm</div>
                     </div>   
-                    <form id="2pm_data" class="col-10">
-                       <input type="text">
+                    <form class="col-10">
+                       <input type="text"  id="1pm_Data" class="inputText"/> 
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                    <div class="col-2 label">
-                       <div class="time">3 pm</div>
+                       <div class="time">3pm</div>
                     </div>
-                    <form id="3pm_Data" class="col-10 eventtext">
-                       <input type="text" id="text"/>
+                    <form class="col-10 eventtext">
+                       <input type="text" id="3pm_Data" class="inputText"/>
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                     <div class="col-2 label">
-                        <div class="time">4 pm</div>
+                        <div class="time">4pm</div>
                     </div>
-                    <form id="4pm_Data" class="col-10">
-                        <input type="text"/>
+                    <form class="col-10">
+                        <input type="text" id="4pm_Data" class="inputText"/>
                     </form>
                </div>
                <br>
                <div class="row hour-container">
                    <div class="col-2 label">
-                       <div class="time">5 pm</div>
+                       <div class="time">5pm</div>
                     </div>
                     <form id="5pm_Data" class="col-10">
-                       <input type="text">
+                       <input type="text" id="5pm_Data" class="inputText"/>
                     </form>
                </div>
             </div>
