--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     </nav>
     <div class="jumbotron container center-text">
-        <h1 class="display-4">2020 Daily Planner 2020</h1>
+        <h1 class="display-4">Daily Planner 2020</h1>
         <p class="lead">Keeping your life organized!</p>
         <div id="clock"></div>
         <hr class="my-4">
