--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0577b79f7c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="stylesheet" href="./Asset/CSS/style.css">
     <title>Daily Planner</title>
 </head>
 <body></body>
@@ -121,6 +121,6 @@
     <script src="/jquery/jquery-3.4.1.min.js"></script>
     <script src="./asset/js/moment.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="./asset/js/script.js" type="text/javascript"></script>
+    <script src="./Asset/JS/script.js" type="text/javascript"></script>
 </body>
 </html>
