--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
     </div>
     <script src="/jquery/jquery-3.4.1.min.js"></script>
-    <script src="./asset/js/moment.min.js" type="text/javascript"></script>
+    <script src="./Asset/JS/moment.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="./Asset/JS/script.js" type="text/javascript"></script>
 </body>
