--- a/index.html
+++ b/index.html
@@ -8,119 +8,124 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0577b79f7c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="stylesheet" href="./Asset/CSS/style.css">
     <title>Daily Planner</title>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 </head>
-<body></body>
-    
-    </nav>
-    <div class="jumbotron container center-text">
-        <h1 class="display-4">Daily Planner 2020</h1>
-        <p class="lead">Keeping your life organized!</p>
-        <div id="clock"></div>
-        <hr class="my-4">
-        <div class="container" id="maincontent">
-           <div class="title">
-                <button class="prevDate" onclick="#">
-                    <i class="fas fa-backward"></i>
-                </button>
-                <button class="nextDate" onclick="#">
-                    <i class="fas fa-forward"></i>
-                </button>
-                <div id="getDate"> </div>
-           </div>
-           <br>
-           <br>
-           <div class="planner">
-               <div class="row hour-container">
-                   <div class="col-2 label">
-                       <div class="time">9am</div>
+
+<body>
+
+</nav>
+<div class="jumbotron container center-text">
+    <h1 class="display-4">Daily Planner 2020</h1>
+    <p class="lead">Keeping your life organized!</p>
+    <div id="clock"></div>
+    <hr class="my-4">
+    <div class="container" id="maincontent">
+        <div class="title">
+            <button class="prevDate" onclick="#">
+                <i class="fas fa-backward"></i>
+            </button>
+            <button class="nextDate" onclick="#">
+                <i class="fas fa-forward"></i>
+            </button>
+            <div id="getDate"> </div>
+        </div>
+        <br>
+        <br>
+        <div class="planner">
+            <div class="row hour-container">
+                <div class="col-2 label">
+                    <div class="time">9am</div>
                     </div>
                     <form class="col-10 events">
-                       <input type="text" class="inputText" id="9am_Data"/>
+                        <input type="text" class="inputText" id="9am_Data"/>
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
-                   <div class="col-2 label">
+                </div>
+                <br>
+                <div class="row hour-container">
+                    <div class="col-2 label">
                         <div class="time">10am</div>
                     </div> 
                     <form class="col-10">
                         <input type="text" id="10am_Data" class="inputText"/>
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
-                   <div class="col-2 label">
-                       <div class="time">11am</div>
+                </div>
+                <br>
+                <div class="row hour-container">
+                    <div class="col-2 label">
+                        <div class="time">11am</div>
                     </div>
                     <form class="col-10">
-                           <input type="text" id="11am_Data" class="inputText"/>
+                        <input type="text" id="11am_Data" class="inputText"/>
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
+                </div>
+                <br>
+                <div class="row hour-container">
                     <div class="col-2 label">
                         <div class="time">12pm</div>
                     </div>
                     <form class="col-10">
                         <input type="text" id="12pm_Data" class="inputText"/>
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
-                   <div class="col-2 label">
+                </div>
+                <br>
+                <div class="row hour-container">
+                    <div class="col-2 label">
                         <div class="time">1pm</div>
                     </div>
                     <form class="col-10">
                         <input type="text" id="1pm_Data" class="inputText"/>
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
-                   <div class="col-2 label">
-                       <div class="time">2pm</div>
+                </div>
+                <br>
+                <div class="row hour-container">
+                    <div class="col-2 label">
+                        <div class="time">2pm</div>
                     </div>   
                     <form class="col-10">
-                       <input type="text"  id="1pm_Data" class="inputText"/> 
+                        <input type="text"  id="1pm_Data" class="inputText"/> 
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
-                   <div class="col-2 label">
-                       <div class="time">3pm</div>
+                </div>
+                <br>
+                <div class="row hour-container">
+                    <div class="col-2 label">
+                        <div class="time">3pm</div>
                     </div>
                     <form class="col-10 eventtext">
-                       <input type="text" id="3pm_Data" class="inputText"/>
+                        <input type="text" id="3pm_Data" class="inputText"/>
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
+                </div>
+                <br>
+                <div class="row hour-container">
                     <div class="col-2 label">
                         <div class="time">4pm</div>
                     </div>
                     <form class="col-10">
                         <input type="text" id="4pm_Data" class="inputText"/>
                     </form>
-               </div>
-               <br>
-               <div class="row hour-container">
-                   <div class="col-2 label">
-                       <div class="time">5pm</div>
+                </div>
+                <br>
+                <div class="row hour-container">
+                    <div class="col-2 label">
+                        <div class="time">5pm</div>
                     </div>
                     <form id="5pm_Data" class="col-10">
-                       <input type="text" id="5pm_Data" class="inputText"/>
+                        <input type="text" id="5pm_Data" class="inputText"/>
                     </form>
-               </div>
+                </div>
             </div>
             <button type="button" class="btn btn-info" id="btnClear">Clear</button>
             <button type="button" class="btn btn-info" id="btnSave">Save</button>
-           </div>
         </div>
     </div>
-    <script src="/jquery/jquery-3.4.1.min.js"></script>
-    <script src="./asset/js/moment.min.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="./asset/js/script.js" type="text/javascript"></script>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script> -->
+<script src="./Asset/JS/script.js" type="text/javascript"></script>
+
 </body>
 </html>
